# elucify

./: Cargo.toml  README.md
elucify/: Cargo.toml  README.md
elucify/src/: README.md  lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
