[package]
name = "elucify_example_basic"
description = "Basic example usage of Elucify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { version = "0.6.0-alpha1", default-features = false }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
serde = "1.0.137"
jsonwebtoken = { version = "8", default-features = false }
lazy_static = "1.4"
chrono = { version = "0.4.19", features = ["serde"] }
elucify = { git = "https://github.com/eliblaney/elucify" }
