[package]
name = "elucify_example_basic"
description = "Basic example usage of Elucify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = "1.0.137"
chrono = { version = "0.4.19", features = ["serde"] }
elucify = { git = "https://github.com/eliblaney/elucify" }
